--- a/css/style.css
+++ b/css/style.css
@@ -371,23 +371,20 @@ flex-basis: calc((100% - (24px * 2)) / 3);
 
 .team{
 display: flex;
-flex-wrap: nowrap;
+flex-wrap: wrap;
 gap: 24px;
 }
 
  .team-list{
     flex-basis: calc((100% - (24px * 3)) / 4 );
     background:var(--background-white);
-    border: 1px solid var(--accent);
-    border-top: none;
-    background: #FFFFFF;
     box-shadow: 0px 1px 6px 
   rgba(46, 47, 66, 0.08), 
     0px 1px 1px 
   rgba(46, 47, 66, 0.16),
     0px 2px 1px
   rgba(46, 47, 66, 0.08);
-border-radius: 0px 0px 4px 4px;
+   border-radius: 0px 0px 4px 4px;
  }
 
 
